# ot-harjoitustyo

./: .coveragerc  README.md  data.db  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  lahdeviite.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: teht1.md  teht2.md
src/: constants.py  game_loop.py  index.py  level.py  map.py
src/di/: clock.py  event_queue.py  input.py  renderer.py
src/game/: body.py  endscreen_data.py  level_data.py  map.py  sprite_animation.py  sprites.py  timer.py
src/scenes/: end_screen.py  level.py  level_editor.py  level_list.py  main_menu.py  scene.py
src/sprites/: block.py  end.py  enemy.py  placeable.py  player.py  tile_cursor.py
src/tests/: db_test.py  enemy_test.py  game_loop_test.py  level_editor_test.py  level_test.py  map_test.py  player_test.py
src/tools/: asset_helpers.py  asset_path.py  db.py  db_connection.py  db_models.py  db_utils.py  font_manager.py  preview_generator.py  spritesheet_frames.py
src/ui/: button.py  button_info.py  confirm_box.py  editor_ui.py  level_ui.py  text_box.py
src/wrappers/: clock.py  renderer.py  user_input.py
